--- a/app/src/main/res/layout/wallet_add_money_visa.xml
+++ b/app/src/main/res/layout/wallet_add_money_visa.xml
@@ -120,7 +120,9 @@
                 <EditText
                     android:id="@+id/add_money_holder_name"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="50dp"
+                    android:paddingStart="@dimen/dimen_10dp"
+                    android:background="@drawable/edittext_corner"
                     android:hint="Enter.."
                     android:inputType="text"
                     android:paddingLeft="2dp"
@@ -144,7 +146,9 @@
                 <EditText
                     android:id="@+id/add_money_creditCardNumber"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="50dp"
+                    android:paddingStart="@dimen/dimen_10dp"
+                    android:background="@drawable/edittext_corner"
                     android:hint="Enter.."
                     android:inputType="number"
                     android:paddingLeft="2dp"
@@ -174,7 +178,9 @@
                     <EditText
                         android:id="@+id/add_money_card_expiry"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="50dp"
+                        android:paddingStart="@dimen/dimen_10dp"
+                        android:background="@drawable/edittext_corner"
                         android:hint="MM/YY"
                         android:inputType="date"
                         android:maxLength="5"
@@ -198,7 +204,9 @@
                     <EditText
                         android:id="@+id/add_money_card_cvv"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="50dp"
+                        android:paddingStart="@dimen/dimen_10dp"
+                        android:background="@drawable/edittext_corner"
                         android:hint="Enter.."
                         android:inputType="number"
                         android:paddingLeft="2dp"
@@ -222,7 +230,9 @@
                 <EditText
                     android:id="@+id/wallet_add_money_amount"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="50dp"
+                    android:paddingStart="@dimen/dimen_10dp"
+                    android:background="@drawable/edittext_corner"
                     android:hint="Enter.."
                     android:inputType="number"
                     android:paddingLeft="2dp"
