store spray and seeds ui

--- a/app/src/main/res/layout/content_crop_inventory_spray_manager.xml
+++ b/app/src/main/res/layout/content_crop_inventory_spray_manager.xml
@@ -1,16 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="2dp"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    android:layout_gravity="center"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:theme="@style/AppTheme"
+    android:background="@color/white"
     tools:context=".activities.farmrecords.CropInventorySprayManagerActivity"
     tools:showIn="@layout/activity_crop_inventory_spray_manager">
-    <ScrollView
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <LinearLayout
+        android:id="@+id/layout_add_money"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:gravity="center"
+            android:text="@string/addspray"
+            android:theme="@style/HeaderThemeWhite"/>
+
+    </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -20,7 +41,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
+                  android:layout_marginBottom="@dimen/dimen_30dp"
                 android:orientation="horizontal">
 
 			<LinearLayout
@@ -35,9 +56,10 @@
                      <EditText
                         android:id="@+id/txt_crop_spray_date_of_purchase"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="50dp"
+                         android:paddingStart="@dimen/dimen_10dp"
                         android:layout_weight="0.5"
-                        android:background="@drawable/input_shapes_grey_spinner"
+                        android:background="@drawable/edittext_corner"
                         android:hint="Purchase Date"
                         android:inputType="none"
                         android:focusable="false"
@@ -52,20 +74,42 @@
                     android:orientation="vertical"
                     >
 
-			<LinearLayout
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:background="@drawable/input_shapes_grey_spinner"
-					android:padding="3.4dp">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:background="@drawable/edittext_corner"
+                    android:layout_marginStart="12dp"
+                    android:orientation="horizontal">
+
                     <Spinner
                         android:id="@+id/sp_crop_spray_type"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="text"
+                        android:layout_height="50dp"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="center"
+                        android:background="@android:color/transparent"
+                        android:gravity="center"
+                        android:layout_marginLeft="5dp"
                         android:entries="@array/crop_spray_type"
                         android:hint="Enter.."
-                        />
-			</LinearLayout>
+                        android:spinnerMode="dropdown"/>
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="center"
+                        android:src="@drawable/ic_baseline_arrow_drop_down_24" />
+
+                </RelativeLayout>
+
+
                 </LinearLayout>
 
             </LinearLayout>
@@ -73,11 +117,11 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="@dimen/dimen_30dp"
                 android:orientation="horizontal">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical"
@@ -88,16 +132,18 @@
                     <EditText
                         android:id="@+id/txt_crop_spray_spray_name"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="50dp"
+                        android:paddingStart="@dimen/dimen_10dp"
+                        android:layout_weight="0.5"
+                        android:background="@drawable/edittext_corner"
                         android:inputType="text"
-                        android:background="@drawable/input_shapes"
                         android:hint="Spray Name.."
                         android:textSize="14sp" />
 
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical"
@@ -105,65 +151,85 @@
 
 
 
-                <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/input_shapes_grey_spinner"
-                android:padding="3.4dp">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:background="@drawable/edittext_corner"
+                    android:layout_marginStart="12dp"
+                    android:orientation="horizontal">
+
                     <Spinner
                         android:id="@+id/spinner_crop_spray_unit"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="50dp"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="center"
+                        android:background="@android:color/transparent"
+                        android:gravity="center"
+                        android:layout_marginLeft="5dp"
                         android:entries="@array/crop_spray_usage_units"
                         android:hint="Units"
-                        />
-                        </LinearLayout>
-                </LinearLayout>
+                        android:spinnerMode="dropdown"/>
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="center"
+                        android:src="@drawable/ic_baseline_arrow_drop_down_24" />
+
+                </RelativeLayout>
 
             </LinearLayout>
+            </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginBottom="@dimen/dimen_30dp"
+                android:background="@drawable/edittext_corner"
                 android:orientation="horizontal">
 
-                    <EditText
-                        android:id="@+id/txt_crop_spray_qty"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Quantity"
-                        android:layout_weight="0.7"
-                        android:inputType="number|numberDecimal"
-                        android:background="@drawable/input_shapes"
-                        android:textSize="14sp"
-                        android:visibility="visible" />
+                <EditText
+                    android:id="@+id/txt_crop_spray_qty"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.8"
+                    android:paddingLeft="@dimen/dimen_10dp"
+                    android:background="@android:color/transparent"
+                    android:inputType="number"
+                    android:textSize="14sp"
+                    android:hint="Quantity" />
 
                 <TextView
                     android:id="@+id/txt_crop_spray_units"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:text="ML"
-                    android:gravity="center"
+                    android:background="@drawable/edittext_oneside_corner_green"
                     android:textColor="@color/white"
-                    android:layout_weight="0.3"
+                    android:text="ML"
                     android:textSize="14sp"
-                    android:background="@color/colorPrimary" />
-
-
-
-
+                    android:gravity="center"
+                    android:layout_weight="0.1" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="@dimen/dimen_30dp"
                 android:orientation="horizontal"
-               android:padding="3.4dp">
+                >
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical"
@@ -174,43 +240,46 @@
                     <EditText
                         android:id="@+id/txt_crop_spray_batch_no"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="50dp"
+                        android:paddingStart="@dimen/dimen_10dp"
+                        android:background="@drawable/edittext_corner"
                         android:hint="Batch"
                         android:inputType="text"
-                        android:background="@drawable/input_shapes"
                         android:textSize="14sp"
                         android:visibility="visible" />
 
                 </LinearLayout>
+
+
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
                     android:layout_weight="1"
-                    android:orientation="horizontal"
-                   >
-
-
+                    android:layout_alignParentTop="true"
+                    android:background="@drawable/edittext_corner"
+                    android:layout_marginStart="12dp"
+                    android:orientation="horizontal">
 
                     <EditText
                         android:id="@+id/txt_crop_spray_cost"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:background="@drawable/input_shapes"
-                        android:ems="10"
                         android:layout_weight="0.7"
-                        android:hint="Cost"
+                        android:paddingLeft="@dimen/dimen_10dp"
+                        android:background="@android:color/transparent"
                         android:inputType="number"
-                        android:textSize="14sp" />
+                        android:textSize="14sp"
+                        android:hint="Cost" />
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:text="UGX"
-                        android:gravity="center"
+                        android:background="@drawable/edittext_oneside_corner_green"
                         android:textColor="@color/white"
-                        android:layout_weight="0.3"
+                        android:text="UGX"
                         android:textSize="14sp"
-                        android:background="@color/colorPrimary" />
+                        android:gravity="center"
+                        android:layout_weight="0.2" />
 
                 </LinearLayout>
 
@@ -225,16 +294,17 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="3.4dp"
+                      android:layout_marginBottom="@dimen/dimen_30dp"
                     android:orientation="horizontal">
 
 
                     <EditText
                         android:id="@+id/txt_crop_spray_supplier"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="50dp"
+                        android:paddingStart="@dimen/dimen_10dp"
+                        android:background="@drawable/edittext_corner"
                         android:inputType="text"
-                        android:background="@drawable/input_shapes"
                         android:hint="Supplier.."
                         android:textSize="14sp" />
                     <TextView
@@ -251,7 +321,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
+                
+                android:layout_marginBottom="@dimen/dimen_30dp"
                 android:orientation="horizontal">
 
 
@@ -259,7 +330,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:padding="3.4dp"
                     android:orientation="vertical">
 
 
@@ -267,9 +337,11 @@
                     <EditText
                         android:id="@+id/txt_crop_pray_exp_date"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="50dp"
+                        android:paddingStart="@dimen/dimen_10dp"
+                        android:layout_weight="0.5"
+                        android:background="@drawable/edittext_corner"
                         android:inputType="none"
-                        android:background="@drawable/input_shapes_grey_spinner"
                         android:hint="Expiry Date"
                         android:focusable="false"
                         android:textSize="14sp" />
@@ -293,5 +365,6 @@
                 android:background="@drawable/rounded_corners_button"
                 android:textColor="#ffffff" />
         </LinearLayout>
-    </ScrollView>
-</RelativeLayout>
+
+    </LinearLayout>
+</LinearLayout>
